--- a/Django/item_tracker/tracker/templates/asset_detail.html
+++ b/Django/item_tracker/tracker/templates/asset_detail.html
@@ -75,7 +75,7 @@
             {{ object.updated_at }}
         </div>
     </div> -->
-    <a class="btn btn-primary" href="{% url 'tracker:test_page' 21 %}"> テストページ</a>
+    <a class="btn btn-primary" href="{% url 'tracker:test_page' asset_id %}"> テストページ</a>
     <a class="btn btn-primary" href="{% url 'tracker:check_image_add' asset_id %}"> チェックする</a>
 </div>
 {% endblock %}
