--- a/Django/item_tracker/tracker/templates/history_add.html
+++ b/Django/item_tracker/tracker/templates/history_add.html
@@ -16,13 +16,18 @@
                 <canvas id="canvas" style="width: 100%; height: auto;"></canvas>
                 <img id="image" src="{{ image.url }}" width="{{ image.width }}" height="{{ image.height }}" style="display: none;"/>
                 <span id="create" style="display: none;">{{ create }}</span>
+
+                <span id="result_box_x_min" style="display: none;">{{ box_x_min }}</span>
+                <span id="result_box_y_min" style="display: none;">{{ box_y_min }}</span>
+                <span id="result_box_x_max" style="display: none;">{{ box_x_max }}</span>
+                <span id="result_box_y_max" style="display: none;">{{ box_y_max }}</span>
                 {% for result in results %}
                     {% if forloop.first %}
+                        <span id="item_box" style="display: none;">{{ results|length }}</span>
                         <span id="box_x_min" style="display: none;">{{ result.box_x_min }}</span>
                         <span id="box_y_min" style="display: none;">{{ result.box_y_min }}</span>
                         <span id="box_x_max" style="display: none;">{{ result.box_x_max }}</span>
                         <span id="box_y_max" style="display: none;">{{ result.box_y_max }}</span>
-                        <span id="item_box" style="display: none;">{{ results|length }}</span>
                     {% else %}
                         <span id="item_{{ forloop.counter0 }}_x_min" style="display: none;">{{ result.box_x_min }}</span>
                         <span id="item_{{ forloop.counter0 }}_y_min" style="display: none;">{{ result.box_y_min }}</span>
@@ -80,6 +85,11 @@
 
     const check_list = document.getElementById("check_list");
     
+    const result_box_x_min = Number(document.getElementById("result_box_x_min").innerText);
+    const result_box_y_min = Number(document.getElementById("result_box_y_min").innerText);
+    const result_box_x_max = Number(document.getElementById("result_box_x_max").innerText);
+    const result_box_y_max = Number(document.getElementById("result_box_y_max").innerText);
+
     const box_x_min = Number(document.getElementById("box_x_min").innerText);
     const box_y_min = Number(document.getElementById("box_y_min").innerText);
     const box_x_max = Number(document.getElementById("box_x_max").innerText);
@@ -98,6 +108,19 @@
     // 描画状態を管理するフラグと座標を初期化
     let isDrawing = false;
     let startX, startY, width, height;
+
+    const x_fix = result_box_x_max - result_box_x_min;
+    const y_fix = result_box_y_max - result_box_y_min;
+
+    canvas.width = x_fix;
+    canvas.height = y_fix;
+
+    let x_fit = canvas.width / x_fix;
+    let y_fit = canvas.height / y_fix;
+
+    let x_min_fit = result_box_x_min;
+    let y_min_fit = result_box_y_min;
+
 
     // バウンディングボックスの座標を初期化
     let x_min, x_max, y_min, y_max;
@@ -128,26 +151,16 @@
     // canvas.width = image.width;
     // canvas.height = image.height;
     
-    const x_fix = box_x_max - box_x_min;
-    const y_fix = box_y_max - box_y_min;
-
-    canvas.width = x_fix;
-    canvas.height = y_fix;
-
-    let x_fit = canvas.width / x_fix;
-    let y_fit = canvas.height / y_fix;
-
-    let x_min_fit = box_x_min;
-    let y_min_fit = box_y_min;
+    
     
     function auto_set_box(i) {
         let w = x_fix / canvas.width;
         let h = y_fix / canvas.height;
         
-        document.getElementById(`id_form-${i}-box_x_min`).value = (box_li[i][0] * w) + box_x_min;
-        document.getElementById(`id_form-${i}-box_y_min`).value = (box_li[i][1] * h) + box_y_min;
-        document.getElementById(`id_form-${i}-box_x_max`).value = (box_li[i][2] * w) + box_x_min;
-        document.getElementById(`id_form-${i}-box_y_max`).value = (box_li[i][3] * h) + box_y_min;
+        document.getElementById(`id_form-${i}-box_x_min`).value = (box_li[i][0] * w) + result_box_x_min;
+        document.getElementById(`id_form-${i}-box_y_min`).value = (box_li[i][1] * h) + result_box_y_min;
+        document.getElementById(`id_form-${i}-box_x_max`).value = (box_li[i][2] * w) + result_box_x_min;
+        document.getElementById(`id_form-${i}-box_y_max`).value = (box_li[i][3] * h) + result_box_y_min;
     }
 
     function auto_fit() {
@@ -169,15 +182,15 @@
             x_fit = canvas.width / x_fix;
             y_fit = canvas.height / y_fix;
 
-            x_min_fit = canvas.width * x_fit;
-            y_min_fit = canvas.height * y_fit;
+            x_min_fit = result_box_x_min * x_fit;
+            y_min_fit = result_box_y_min * y_fit;
 
             // image.width *= canvas.width / x_fix;
             // image.height *= canvas.height / y_fix;
 
             
             check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
-            ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
+            ctx.drawImage(image, result_box_x_min, result_box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
 
             // image.width = canvas.width;
             // image.height = canvas.height;
@@ -206,8 +219,8 @@
         // canvas.height = image.height;
         // ctx.drawImage(image, 0, 0);
 
-        const x_fix = box_x_max - box_x_min;
-        const y_fix = box_y_max - box_y_min;
+        const x_fix = result_box_x_max - result_box_x_min;
+        const y_fix = result_box_y_max - result_box_y_min;
 
         canvas.width = preview.getBoundingClientRect().width.toFixed();
         canvas.height = canvas.width * (y_fix / x_fix);
@@ -215,12 +228,12 @@
         let x_fit = canvas.width / x_fix;
         let y_fit = canvas.height / y_fix;
 
-        let x_min_fit = box_x_min * x_fit;
-        let y_min_fit = box_y_min * y_fit;
+        let x_min_fit = result_box_x_min * x_fit;
+        let y_min_fit = result_box_y_min * y_fit;
 
         check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
 
-        ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
+        ctx.drawImage(image, result_box_x_min, result_box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
 
         ctx.strokeStyle = "blue"; // 青い線で描画
         ctx.lineWidth = 2;
@@ -230,10 +243,10 @@
             if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
                 console.log(box_li[i]);
 
-                document.getElementById(`id_form-${i}-box_x_min`).value = box_li[i][0] + box_x_min;
-                document.getElementById(`id_form-${i}-box_y_min`).value = box_li[i][1] + box_y_min;
-                document.getElementById(`id_form-${i}-box_x_max`).value = box_li[i][2] + box_x_min;
-                document.getElementById(`id_form-${i}-box_y_max`).value = box_li[i][3] + box_y_min;
+                document.getElementById(`id_form-${i}-box_x_min`).value = box_li[i][0] + result_box_x_min;
+                document.getElementById(`id_form-${i}-box_y_min`).value = box_li[i][1] + result_box_y_min;
+                document.getElementById(`id_form-${i}-box_x_max`).value = box_li[i][2] + result_box_x_min;
+                document.getElementById(`id_form-${i}-box_y_max`).value = box_li[i][3] + result_box_y_min;
 
                 box_li[i][0] *= x_fit;
                 box_li[i][1] *= y_fit;
@@ -263,7 +276,7 @@
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         // ctx.drawImage(image, 0, 0);
-        ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
+        ctx.drawImage(image, result_box_x_min, result_box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
         // console.log(order);
         ctx.strokeStyle = "blue"; // 青い線で描画
         
@@ -391,27 +404,12 @@
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         // ctx.drawImage(image, 0, 0);
-        ctx.drawImage(image, box_x_min, box_y_min, canvas.width, canvas.height, 0, 0, canvas.width, canvas.height,);
+        ctx.drawImage(image, result_box_x_min, result_box_y_min, canvas.width, canvas.height, 0, 0, canvas.width, canvas.height,);
         for (let i = 0; i < set.length; i++) {
             if (set[i].checked) draw_box(i); // バウンディングボックスの描画
         }
     };
 
-    // 選択したバウンディングボックスの座標を追加
-    function set_box() {
-        for (let i = 0; i < set.length; i++) {
-            if (set[i].checked) {
-                box_li[i] = [
-                    x_min.toFixed(),
-                    y_min.toFixed(),
-                    x_max.toFixed(),
-                    y_max.toFixed()
-                ];
-                console.log(box_li[i]);
-            }
-        }
-        out_box();
-    };
 
     // 選択したバウンディングボックスを削除
     function del_box(i) {
